--- a/src/Web/Pages/Shared/_pagination.cshtml
+++ b/src/Web/Pages/Shared/_pagination.cshtml
@@ -18,7 +18,7 @@
                        id="Previous"
                        asp-all-route-data="prevRouteData"
                        aria-label="Previous">
-                        Previous
+                        PREVIOUSSSS
                     </a>
                 </div>
 
@@ -33,7 +33,7 @@
                        id="Next"
                        asp-all-route-data="nextRouteData"
                        aria-label="Next">
-                        Next
+                        NEXTTTT
                     </a>
                 </div>
             </nav>
